# console-messager-aip

./: .gitignore  README.md  main_client.py  main_server.py  pyproject.toml  requirements.txt  security.py
client/: exceptions.py  framework.py  logger.py
client/controllers/: auth.py  base.py  chat.py  system.py  token.py  users.py
dto/: models.py
server/: database.py  db_models.py  exceptions.py  framework.py
server/controllers/: auth.py  chat.py  users.py
tests/: __init__.py  test_client_framework.py  test_dto.py  test_security.py  test_server_db.py
