[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[project]
name = "console-messager-aip"
version = "0.1.0"
dependencies = [
    "aiosqlite>=0.22.0",
    "cryptography>=46.0.3",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]
requires-python = ">=3.12"
